--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with: 
-          aws-region: ${{ secrets.AWS_PROD_REGION }}
+          aws-region: ${{ env.AWS_PROD_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
       - name: Deploy to S3
-        run: aws s3 sync . s3://$AWS_PROD_BUCKET_NAME --delete
+        run: aws s3 sync . s3://${{ env.AWS_PROD_BUCKET_NAME }} --delete
