--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Test environment
+        run: echo "This is the ${{ github.event_name }} event for branch ${{ github.ref }}"
+
+      - name: Echo AWS Region
+        run: echo "AWS Region is ${{ env.AWS_PROD_REGION }}"
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with: 
