--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,14 @@ jobs:
         run: echo "This is the ${{ github.event_name }} event for branch ${{ github.ref }}"
 
       - name: Echo AWS Region
-        run: echo "AWS Region is $AWS_PROD_REGION"
+        run: echo "AWS Region is ${{ vars.AWS_PROD_REGION }}"
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with: 
-          aws-region: ${{ env.AWS_PROD_REGION }}
+          aws-region: ${{ vars.AWS_PROD_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
       - name: Deploy to S3
-        run: aws s3 sync . s3://${{ env.AWS_PROD_BUCKET_NAME }} --delete
+        run: aws s3 sync . s3://${{ vars.AWS_PROD_BUCKET_NAME }} --delete
