--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          path: ${{ github.repository }}
 
       - name: Echo directory
         run: ls -la
+        
+      - name: Echo sub-directory
+        run: ls -lha ${{ github.repository }}
 
       - name: Log event name
-        run: echo "This is the ${{ github.event_name }} event for branch ${{ github.ref }}"
+        run: echo "This is the ${{ github.event_name }} event for branch ${{ github.ref }} in repository ${{ github.repository }}."
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -26,4 +31,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
       - name: Deploy to S3
-        run: aws s3 sync . s3://${{ vars.AWS_PROD_BUCKET_NAME }} --delete
+        run: aws s3 sync ./${{ github.repository }} s3://${{ vars.AWS_PROD_BUCKET_NAME }} --delete
