--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo "This is the ${{ github.event_name }} event for branch ${{ github.ref }} in repository ${{ github.repository }}."
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1-node16
         with: 
           aws-region: ${{ vars.AWS_PROD_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
