excluding .git and .github folders from the s3 sync

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
       - name: Deploy to S3
-        run: aws s3 sync ./${{ github.repository }} s3://${{ vars.AWS_PROD_BUCKET_NAME }} --delete
+        run: aws s3 sync ./${{ github.repository }} s3://${{ vars.AWS_PROD_BUCKET_NAME }} --delete --exclude ".git/*" --exclude ".github/*"
