--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   production_deploy:
+    name: 'Production Website Deploy'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
