cleanup all actions and workflows to be more clear in the github actions panel

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,8 +1,12 @@
-name: Website CI/CD
+name: Dev - Website CI/CD
 on:
   push:
     branches:
     - '!main'
+    - '!master'
+    - '!production'
+    - '!prod'
+    
 
 jobs:
   dev_deploy:
