updated dev workflow to utilize any branch beginning with dev

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,6 +2,10 @@ name: Dev - Website CI/CD
 on:
   push:
     branches:
+    - 'dev_*'
+    - 'dev/*'
+    - 'development'
+    - 'dev-*'
     - '!main'
     - '!master'
     - '!production'
