added ls echo to verify which files are being checkedout

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         
+      - name: Echo directory
+        run: ls -lha
 
       ################################
       # Run Linter against code base #
