--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,9 +23,10 @@ jobs:
       ##########################
       - name: Checkout Code
         uses: actions/checkout@v3
-        
-      - name: Echo directory
-        run: ls -lha
+        with:
+          # Full git history is needed to get a proper
+          # list of changed files within `super-linter`
+          fetch-depth: 0
 
       ################################
       # Run Linter against code base #
