adding environment for deployment to dev and main

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,6 +17,8 @@ jobs:
   dev_deploy:
     name: 'Dev Website Deploy'
     runs-on: ubuntu-latest
+    environment: dev
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
