--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
   prod_deploy:
     name: 'Prod Website Deploy'
     runs-on: ubuntu-latest
+    environment: prod
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
