added permissions to test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,19 @@ on:
       - master
       - main
 
+permissions: {}
+
 jobs:
   test_linter:
     name: Linter
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: read
+      # To report GitHub Actions status checks
+      statuses: write
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
